# cg-agent-kit

./: .gitignore  LICENSE  README.md  cg_adapt_demo.py  cg_context.md  cg_local_client.py  manifest.json  pyproject.toml  requirements.txt  server.json  test_cg_mcp_server.py
.github/workflows/: ci.yml
cg_agent_kit/: __init__.py  cg_mcp_server.py  cg_riscv.md
cg_agent_kit/examples/: BarrelShift.cg  BitFieldDecode.cg  Divide.cg  DotProduct.cg  FixedSqrt.cg  Integ.cg  SqrDist.cg  Tee2.cg
examples/: Clamp.cg  Counter.cg  Distance.cg  FifoPipe.cg  Fir.cg  Lerp.cg  RSqrt.cg  Recip.cg  RegisterFile.cg  SeqDiv.cg
