[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cg-agent-kit"
version = "0.1.1"
description = "MCP server for FPGA hardware design in C⏚ — drive the open-source C⏚ Verilog compiler from an AI agent."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Neosyn" }]
keywords = ["mcp", "model-context-protocol", "fpga", "hdl", "verilog", "eda", "rtl", "hardware", "ai", "llm"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Compilers",
]
dependencies = ["mcp>=1.0"]

[project.urls]
Homepage = "https://neosyn.io"
Repository = "https://github.com/Neosyn-Logic/cg-agent-kit"
"Open source" = "https://neosyn.io/open"

[project.scripts]
cg-mcp-server = "cg_agent_kit.cg_mcp_server:main"

[tool.setuptools]
packages = ["cg_agent_kit"]

[tool.setuptools.package-data]
cg_agent_kit = ["*.md", "*.json", "examples/*.cg"]
